Bug 575210 - [17-18] JEP 411-393: Deprecate the Security Manager for Removal
Change-Id: I5848f0c530a4e7f3c5a261012726460b85c074d4
Reviewed-on: https://git.eclipse.org/r/c/platform/eclipse.platform/+/190769
Tested-by: Sarika Sinha <sarika.sinha@in.ibm.com>
Reviewed-by: Sarika Sinha <sarika.sinha@in.ibm.com>